--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(pintos)
 
 set(CMAKE_CXX_STANDARD 11)
 
+add_definitions(-DUSERPROG)
+
 include_directories(src/devices)
 include_directories(src/filesys)
 include_directories(src/lib)
@@ -665,273 +667,6 @@ add_executable(pintos
         src/userprog/build/lib/string.o
         src/userprog/build/lib/ustar.d
         src/userprog/build/lib/ustar.o
-        src/userprog/build/tests/filesys/base/child-syn-read
-        src/userprog/build/tests/filesys/base/child-syn-read.d
-        src/userprog/build/tests/filesys/base/child-syn-read.o
-        src/userprog/build/tests/filesys/base/child-syn-wrt
-        src/userprog/build/tests/filesys/base/child-syn-wrt.d
-        src/userprog/build/tests/filesys/base/child-syn-wrt.o
-        src/userprog/build/tests/filesys/base/lg-create
-        src/userprog/build/tests/filesys/base/lg-create.d
-        src/userprog/build/tests/filesys/base/lg-create.o
-        src/userprog/build/tests/filesys/base/lg-full
-        src/userprog/build/tests/filesys/base/lg-full.d
-        src/userprog/build/tests/filesys/base/lg-full.o
-        src/userprog/build/tests/filesys/base/lg-random
-        src/userprog/build/tests/filesys/base/lg-random.d
-        src/userprog/build/tests/filesys/base/lg-random.o
-        src/userprog/build/tests/filesys/base/lg-seq-block
-        src/userprog/build/tests/filesys/base/lg-seq-block.d
-        src/userprog/build/tests/filesys/base/lg-seq-block.o
-        src/userprog/build/tests/filesys/base/lg-seq-random
-        src/userprog/build/tests/filesys/base/lg-seq-random.d
-        src/userprog/build/tests/filesys/base/lg-seq-random.o
-        src/userprog/build/tests/filesys/base/sm-create
-        src/userprog/build/tests/filesys/base/sm-create.d
-        src/userprog/build/tests/filesys/base/sm-create.o
-        src/userprog/build/tests/filesys/base/sm-full
-        src/userprog/build/tests/filesys/base/sm-full.d
-        src/userprog/build/tests/filesys/base/sm-full.o
-        src/userprog/build/tests/filesys/base/sm-random
-        src/userprog/build/tests/filesys/base/sm-random.d
-        src/userprog/build/tests/filesys/base/sm-random.o
-        src/userprog/build/tests/filesys/base/sm-seq-block
-        src/userprog/build/tests/filesys/base/sm-seq-block.d
-        src/userprog/build/tests/filesys/base/sm-seq-block.o
-        src/userprog/build/tests/filesys/base/sm-seq-random
-        src/userprog/build/tests/filesys/base/sm-seq-random.d
-        src/userprog/build/tests/filesys/base/sm-seq-random.o
-        src/userprog/build/tests/filesys/base/syn-read
-        src/userprog/build/tests/filesys/base/syn-read.d
-        src/userprog/build/tests/filesys/base/syn-read.o
-        src/userprog/build/tests/filesys/base/syn-remove
-        src/userprog/build/tests/filesys/base/syn-remove.d
-        src/userprog/build/tests/filesys/base/syn-remove.o
-        src/userprog/build/tests/filesys/base/syn-write
-        src/userprog/build/tests/filesys/base/syn-write.d
-        src/userprog/build/tests/filesys/base/syn-write.o
-        src/userprog/build/tests/filesys/seq-test.d
-        src/userprog/build/tests/filesys/seq-test.o
-        src/userprog/build/tests/userprog/no-vm/multi-oom
-        src/userprog/build/tests/userprog/no-vm/multi-oom.d
-        src/userprog/build/tests/userprog/no-vm/multi-oom.o
-        src/userprog/build/tests/userprog/args-dbl-space
-        src/userprog/build/tests/userprog/args-many
-        src/userprog/build/tests/userprog/args-multiple
-        src/userprog/build/tests/userprog/args-multiple.errors
-        src/userprog/build/tests/userprog/args-multiple.output
-        src/userprog/build/tests/userprog/args-none
-        src/userprog/build/tests/userprog/args-none.errors
-        src/userprog/build/tests/userprog/args-none.output
-        src/userprog/build/tests/userprog/args-none.result
-        src/userprog/build/tests/userprog/args-single
-        src/userprog/build/tests/userprog/args-single.errors
-        src/userprog/build/tests/userprog/args-single.output
-        src/userprog/build/tests/userprog/args-single.result
-        src/userprog/build/tests/userprog/args.d
-        src/userprog/build/tests/userprog/args.o
-        src/userprog/build/tests/userprog/bad-jump
-        src/userprog/build/tests/userprog/bad-jump.d
-        src/userprog/build/tests/userprog/bad-jump.o
-        src/userprog/build/tests/userprog/bad-jump2
-        src/userprog/build/tests/userprog/bad-jump2.d
-        src/userprog/build/tests/userprog/bad-jump2.o
-        src/userprog/build/tests/userprog/bad-read
-        src/userprog/build/tests/userprog/bad-read.d
-        src/userprog/build/tests/userprog/bad-read.o
-        src/userprog/build/tests/userprog/bad-read2
-        src/userprog/build/tests/userprog/bad-read2.d
-        src/userprog/build/tests/userprog/bad-read2.o
-        src/userprog/build/tests/userprog/bad-write
-        src/userprog/build/tests/userprog/bad-write.d
-        src/userprog/build/tests/userprog/bad-write.o
-        src/userprog/build/tests/userprog/bad-write2
-        src/userprog/build/tests/userprog/bad-write2.d
-        src/userprog/build/tests/userprog/bad-write2.o
-        src/userprog/build/tests/userprog/boundary.d
-        src/userprog/build/tests/userprog/boundary.o
-        src/userprog/build/tests/userprog/child-args
-        src/userprog/build/tests/userprog/child-bad
-        src/userprog/build/tests/userprog/child-bad.d
-        src/userprog/build/tests/userprog/child-bad.o
-        src/userprog/build/tests/userprog/child-close
-        src/userprog/build/tests/userprog/child-close.d
-        src/userprog/build/tests/userprog/child-close.o
-        src/userprog/build/tests/userprog/child-rox
-        src/userprog/build/tests/userprog/child-rox.d
-        src/userprog/build/tests/userprog/child-rox.o
-        src/userprog/build/tests/userprog/child-simple
-        src/userprog/build/tests/userprog/child-simple.d
-        src/userprog/build/tests/userprog/child-simple.o
-        src/userprog/build/tests/userprog/close-bad-fd
-        src/userprog/build/tests/userprog/close-bad-fd.d
-        src/userprog/build/tests/userprog/close-bad-fd.o
-        src/userprog/build/tests/userprog/close-normal
-        src/userprog/build/tests/userprog/close-normal.d
-        src/userprog/build/tests/userprog/close-normal.o
-        src/userprog/build/tests/userprog/close-stdin
-        src/userprog/build/tests/userprog/close-stdin.d
-        src/userprog/build/tests/userprog/close-stdin.o
-        src/userprog/build/tests/userprog/close-stdout
-        src/userprog/build/tests/userprog/close-stdout.d
-        src/userprog/build/tests/userprog/close-stdout.o
-        src/userprog/build/tests/userprog/close-twice
-        src/userprog/build/tests/userprog/close-twice.d
-        src/userprog/build/tests/userprog/close-twice.o
-        src/userprog/build/tests/userprog/create-bad-ptr
-        src/userprog/build/tests/userprog/create-bad-ptr.d
-        src/userprog/build/tests/userprog/create-bad-ptr.o
-        src/userprog/build/tests/userprog/create-bound
-        src/userprog/build/tests/userprog/create-bound.d
-        src/userprog/build/tests/userprog/create-bound.o
-        src/userprog/build/tests/userprog/create-empty
-        src/userprog/build/tests/userprog/create-empty.d
-        src/userprog/build/tests/userprog/create-empty.o
-        src/userprog/build/tests/userprog/create-exists
-        src/userprog/build/tests/userprog/create-exists.d
-        src/userprog/build/tests/userprog/create-exists.o
-        src/userprog/build/tests/userprog/create-long
-        src/userprog/build/tests/userprog/create-long.d
-        src/userprog/build/tests/userprog/create-long.o
-        src/userprog/build/tests/userprog/create-normal
-        src/userprog/build/tests/userprog/create-normal.d
-        src/userprog/build/tests/userprog/create-normal.o
-        src/userprog/build/tests/userprog/create-null
-        src/userprog/build/tests/userprog/create-null.d
-        src/userprog/build/tests/userprog/create-null.o
-        src/userprog/build/tests/userprog/exec-arg
-        src/userprog/build/tests/userprog/exec-arg.d
-        src/userprog/build/tests/userprog/exec-arg.o
-        src/userprog/build/tests/userprog/exec-bad-ptr
-        src/userprog/build/tests/userprog/exec-bad-ptr.d
-        src/userprog/build/tests/userprog/exec-bad-ptr.o
-        src/userprog/build/tests/userprog/exec-bound
-        src/userprog/build/tests/userprog/exec-bound-2
-        src/userprog/build/tests/userprog/exec-bound-2.d
-        src/userprog/build/tests/userprog/exec-bound-2.o
-        src/userprog/build/tests/userprog/exec-bound-3
-        src/userprog/build/tests/userprog/exec-bound-3.d
-        src/userprog/build/tests/userprog/exec-bound-3.o
-        src/userprog/build/tests/userprog/exec-bound.d
-        src/userprog/build/tests/userprog/exec-bound.o
-        src/userprog/build/tests/userprog/exec-missing
-        src/userprog/build/tests/userprog/exec-missing.d
-        src/userprog/build/tests/userprog/exec-missing.o
-        src/userprog/build/tests/userprog/exec-multiple
-        src/userprog/build/tests/userprog/exec-multiple.d
-        src/userprog/build/tests/userprog/exec-multiple.o
-        src/userprog/build/tests/userprog/exec-once
-        src/userprog/build/tests/userprog/exec-once.d
-        src/userprog/build/tests/userprog/exec-once.o
-        src/userprog/build/tests/userprog/exit
-        src/userprog/build/tests/userprog/exit.d
-        src/userprog/build/tests/userprog/exit.o
-        src/userprog/build/tests/userprog/halt
-        src/userprog/build/tests/userprog/halt.d
-        src/userprog/build/tests/userprog/halt.o
-        src/userprog/build/tests/userprog/multi-child-fd
-        src/userprog/build/tests/userprog/multi-child-fd.d
-        src/userprog/build/tests/userprog/multi-child-fd.o
-        src/userprog/build/tests/userprog/multi-recurse
-        src/userprog/build/tests/userprog/multi-recurse.d
-        src/userprog/build/tests/userprog/multi-recurse.o
-        src/userprog/build/tests/userprog/open-bad-ptr
-        src/userprog/build/tests/userprog/open-bad-ptr.d
-        src/userprog/build/tests/userprog/open-bad-ptr.o
-        src/userprog/build/tests/userprog/open-boundary
-        src/userprog/build/tests/userprog/open-boundary.d
-        src/userprog/build/tests/userprog/open-boundary.o
-        src/userprog/build/tests/userprog/open-empty
-        src/userprog/build/tests/userprog/open-empty.d
-        src/userprog/build/tests/userprog/open-empty.o
-        src/userprog/build/tests/userprog/open-missing
-        src/userprog/build/tests/userprog/open-missing.d
-        src/userprog/build/tests/userprog/open-missing.o
-        src/userprog/build/tests/userprog/open-normal
-        src/userprog/build/tests/userprog/open-normal.d
-        src/userprog/build/tests/userprog/open-normal.o
-        src/userprog/build/tests/userprog/open-null
-        src/userprog/build/tests/userprog/open-null.d
-        src/userprog/build/tests/userprog/open-null.o
-        src/userprog/build/tests/userprog/open-twice
-        src/userprog/build/tests/userprog/open-twice.d
-        src/userprog/build/tests/userprog/open-twice.o
-        src/userprog/build/tests/userprog/read-bad-fd
-        src/userprog/build/tests/userprog/read-bad-fd.d
-        src/userprog/build/tests/userprog/read-bad-fd.o
-        src/userprog/build/tests/userprog/read-bad-ptr
-        src/userprog/build/tests/userprog/read-bad-ptr.d
-        src/userprog/build/tests/userprog/read-bad-ptr.o
-        src/userprog/build/tests/userprog/read-boundary
-        src/userprog/build/tests/userprog/read-boundary.d
-        src/userprog/build/tests/userprog/read-boundary.o
-        src/userprog/build/tests/userprog/read-normal
-        src/userprog/build/tests/userprog/read-normal.d
-        src/userprog/build/tests/userprog/read-normal.o
-        src/userprog/build/tests/userprog/read-stdout
-        src/userprog/build/tests/userprog/read-stdout.d
-        src/userprog/build/tests/userprog/read-stdout.o
-        src/userprog/build/tests/userprog/read-zero
-        src/userprog/build/tests/userprog/read-zero.d
-        src/userprog/build/tests/userprog/read-zero.o
-        src/userprog/build/tests/userprog/rox-child
-        src/userprog/build/tests/userprog/rox-child.d
-        src/userprog/build/tests/userprog/rox-child.o
-        src/userprog/build/tests/userprog/rox-multichild
-        src/userprog/build/tests/userprog/rox-multichild.d
-        src/userprog/build/tests/userprog/rox-multichild.o
-        src/userprog/build/tests/userprog/rox-simple
-        src/userprog/build/tests/userprog/rox-simple.d
-        src/userprog/build/tests/userprog/rox-simple.o
-        src/userprog/build/tests/userprog/sc-bad-arg
-        src/userprog/build/tests/userprog/sc-bad-arg.d
-        src/userprog/build/tests/userprog/sc-bad-arg.o
-        src/userprog/build/tests/userprog/sc-bad-sp
-        src/userprog/build/tests/userprog/sc-bad-sp.d
-        src/userprog/build/tests/userprog/sc-bad-sp.o
-        src/userprog/build/tests/userprog/sc-boundary
-        src/userprog/build/tests/userprog/sc-boundary-2
-        src/userprog/build/tests/userprog/sc-boundary-2.d
-        src/userprog/build/tests/userprog/sc-boundary-2.o
-        src/userprog/build/tests/userprog/sc-boundary-3
-        src/userprog/build/tests/userprog/sc-boundary-3.d
-        src/userprog/build/tests/userprog/sc-boundary-3.o
-        src/userprog/build/tests/userprog/sc-boundary.d
-        src/userprog/build/tests/userprog/sc-boundary.o
-        src/userprog/build/tests/userprog/wait-bad-pid
-        src/userprog/build/tests/userprog/wait-bad-pid.d
-        src/userprog/build/tests/userprog/wait-bad-pid.o
-        src/userprog/build/tests/userprog/wait-killed
-        src/userprog/build/tests/userprog/wait-killed.d
-        src/userprog/build/tests/userprog/wait-killed.o
-        src/userprog/build/tests/userprog/wait-simple
-        src/userprog/build/tests/userprog/wait-simple.d
-        src/userprog/build/tests/userprog/wait-simple.o
-        src/userprog/build/tests/userprog/wait-twice
-        src/userprog/build/tests/userprog/wait-twice.d
-        src/userprog/build/tests/userprog/wait-twice.o
-        src/userprog/build/tests/userprog/write-bad-fd
-        src/userprog/build/tests/userprog/write-bad-fd.d
-        src/userprog/build/tests/userprog/write-bad-fd.o
-        src/userprog/build/tests/userprog/write-bad-ptr
-        src/userprog/build/tests/userprog/write-bad-ptr.d
-        src/userprog/build/tests/userprog/write-bad-ptr.o
-        src/userprog/build/tests/userprog/write-boundary
-        src/userprog/build/tests/userprog/write-boundary.d
-        src/userprog/build/tests/userprog/write-boundary.o
-        src/userprog/build/tests/userprog/write-normal
-        src/userprog/build/tests/userprog/write-normal.d
-        src/userprog/build/tests/userprog/write-normal.o
-        src/userprog/build/tests/userprog/write-stdin
-        src/userprog/build/tests/userprog/write-stdin.d
-        src/userprog/build/tests/userprog/write-stdin.o
-        src/userprog/build/tests/userprog/write-zero
-        src/userprog/build/tests/userprog/write-zero.d
-        src/userprog/build/tests/userprog/write-zero.o
-        src/userprog/build/tests/lib.d
-        src/userprog/build/tests/lib.o
-        src/userprog/build/tests/main.d
-        src/userprog/build/tests/main.o
         src/userprog/build/threads/init.d
         src/userprog/build/threads/init.o
         src/userprog/build/threads/interrupt.d
@@ -1005,7 +740,6 @@ add_executable(pintos
         src/utils/squish-unix.o
         src/vm/Make.vars
         src/vm/Makefile
-        src/CMakeLists.txt
         src/LICENSE
         src/Make.config
         src/Makefile
